--- a/Capture Data Wrangling.ipynb
+++ b/Capture Data Wrangling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bd1f8a7a",
+   "id": "975f4a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01d0e56a",
+   "id": "c120c61a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd3f0d80",
+   "id": "55ed79eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "641458ea",
+   "id": "f1cef74b",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c91ff517",
+   "id": "9a3879ce",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "485dd6e2",
+   "id": "42f4ff4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e75bb35f",
+   "id": "fac97cee",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "45a14076",
+   "id": "0d56125c",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "774aaf90",
+   "id": "d49f6f8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3d07476d",
+   "id": "46f15bb3",
    "metadata": {},
    "outputs": [
     {
@@ -750,17 +750,18 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1e5dba45",
+   "id": "6bbdfa05",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge species dictionary df with the capture quantity data\n",
     "capture = pd.merge(capture, species_df, how='left', on=['SPECIES.ALPHA_3_CODE'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "255d5091",
+   "id": "2503b294",
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fe5c079a",
+   "id": "ae1b83d8",
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1334a4f3",
+   "id": "3f6d3745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "30c3b246",
+   "id": "613e11b3",
    "metadata": {},
    "outputs": [
     {
@@ -1688,8 +1689,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e98401df",
+   "execution_count": 16,
+   "id": "d9d06c41",
    "metadata": {},
    "outputs": [
     {
@@ -1774,8 +1775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "16fe3be2",
+   "execution_count": 17,
+   "id": "85ec3d88",
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1967,7 @@
        "[71 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,8 +1981,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "adfbd5ec",
+   "execution_count": 18,
+   "id": "5235e4bd",
    "metadata": {},
    "outputs": [
     {
@@ -2061,6 +2062,44 @@
     "plt.title('Plantae Aquaticae Capture rate')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7167eeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d71a8b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#capture_by_group.to_csv('Major_group_by_year.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "59afc7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#capture_by_spec.to_csv('species_by_year.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a6db25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
